--- a/GitJenkinsProject/pom.xml
+++ b/GitJenkinsProject/pom.xml
@@ -1,27 +1,57 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>GitJenkinsProject</groupId>
-  <artifactId>GitJenkinsProject</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>gitjenkinsprac</name>
-  <description>git_jenkins_prac</description>
-  <build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>GitJenkinsProject</groupId>
+	<artifactId>GitJenkinsProject</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<properties>
+		<jre.level>1.8</jre.level>
+		<jdk.level>1.8</jdk.level>
+	</properties>
+	<name>gitjenkinsprac</name>
+	<description>git_jenkins_prac</description>
+	<build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
+        <version>3.7.0</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-          <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server-standalone -->
-	<dependency>
-    <groupId>org.seleniumhq.selenium</groupId>
-    <artifactId>selenium-server-standalone</artifactId>
-    <version>2.46.0</version>
-	</dependency>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
+      
+      <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.18.1</version>
+    <configuration>
+     <suiteXmlFiles>
+      <!-- TestNG suite XML files -->
+      <suiteXmlFile>testng.xml</suiteXmlFile>
+     </suiteXmlFiles>
+    </configuration>
+   </plugin>
     </plugins>
   </build>
+	
+	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server-standalone -->
+	<dependencies>
+
+	<dependency>
+		<groupId>org.seleniumhq.selenium</groupId>
+		<artifactId>selenium-java</artifactId>
+		<version>2.53.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.testng</groupId>
+		<artifactId>testng</artifactId>
+		<version>6.14.2</version>
+	</dependency>
+	</dependencies>
+
+
+
 </project>
